<resources>
    <string name="app_name">GOLDEN CHANCE LOTTO</string>
    <string name="home_play_button">PLAY</string>
    <string name="home">HOME</string>
    <string name="play">PLAY</string>
    <string name="winningnumber">WINNING NUMBER</string>
    <string name="checkticket">CHECK TICKET</string>
    <string name="account">ACCOUNT</string>
    <string name="profile">PROFILE</string>
    <string name="registeredslips">REGISTERED SLIPS</string>
    <string name="creditmanagement">FUND TRANSFER</string>
    <string name="cashierblocking">CASHIER BLOCKING</string>
    <string name="summarysheet">SUMMARY SHEET</string>
    <string name="bet_type_game_name">[#GAME NAME]</string>
    <string name="walletbalance">[#Amount]</string>
    <string name="walletbalancedescription">MACH ID</string>


    <string-array name="managermenu">
        <item>@string/play</item>
        <item>@string/winningnumber</item>
        <item>@string/checkticket</item>
        <item>@string/account</item>
        <item>@string/profile</item>
        <item>@string/registeredslips</item>
        <item>@string/cashierblocking</item>
        <item>@string/creditmanagement</item>
        <item>@string/logout</item>

    </string-array>

    <string-array name="cashiermenu">
        <item>@string/play</item>
        <item>@string/winningnumber</item>
        <item>@string/checkticket</item>
        <item>@string/account</item>
        <item>@string/profile</item>
        <item>@string/registeredslips</item>
        <item>@string/logout</item>

    </string-array>


    <string name="TransactionType1">&quot;HDX-PT95-CUT-945.bin&quot;</string>
    <string name="TransactionType2">&quot;HDX-PT95-CUT-946.bin&quot;</string>
    <string name="TransactionType3">&quot;HDX-PT95-LP-945.bin&quot;</string>
    <string name="TransactionType4">&quot;HDX-PT95-LP-946.bin&quot;</string>


    <string name="ZiKuFile1">&quot;hdx_ziku_20151230&quot;</string>

    <string name="itpw">              Updating Firmware......</string>
    <string name="itpw2">              Updating Font lib......</string>
    <string name="Determine">"OK"</string>
    <string name="cancel">"Cancel"</string>
    <string name="UpdateFWWarn">"warning: the version chosen is old"</string>


    <string name="GetVersion">"Get Version" </string>
    <string name="UpdateVersion">"Update Version" </string>
    <string name="UpdateFontLib">"Update Font Lib" </string>
    <string name="WarningTimeIsLong">"Updating Font Lib will Take about 6 minutes" </string>
    <string name="quit">"Quit" </string>

    <string name="previousFWV"> "Previous firmware version :" </string>
    <string name="currentFWV"> "Current firmware version :" </string>

    <string name="updateFWFinish">"update firmware finish"</string>

    <string name="selectFW">"Select FirmWare File"</string>

    <string name="appName">"Serail Port Console"</string>


    <string name="getV"> "get version" </string>

    <string name="hello">Hello World,  FileExplorer!</string>
    <string-array name="language">
        <item>"U.S.          "</item>
        <item>"the French    "</item>
        <item>"German        "</item>
        <item>"British       "</item>
        <item>"I Denmark     "</item>
        <item>"the Swedish   "</item>
        <item>"Italian       "</item>
        <item>"Spain  I      "</item>
        <item>"Japan         "</item>
        <item>"Norway        "</item>
        <item>"the Danish II "</item>
        <item>"the Spanish II"</item>
        <item>"Latin America "</item>
        <item>"south Korean  "</item>
        <item>"slovenija/crow emperor"</item>
        <item>"Chinese"</item>
    </string-array>
    <string name="CurrentLanguageis"> "Current Printer Language Is :" </string>

    <string name="IsOutOfPaper"> "The printer is out of paper" </string>
    <string name="HavePaper"> "The printer has a paper" </string>
    <string name="itpw3">              getting the priner information......</string>
    <string name="itpw4">              "have updated Font lib "</string>
    <string name="PrinterNotNormal1"> "The printer is too hot" </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
